Load file from full path as argument